snychronized 原理探析